<resources>
    <string name="app_name">Dotify</string>
    <string name="songListName">All Songs</string>
    <string name="username">Guest</string>
    <string name="btnChangeUserText">CHANGE USER</string>
    <string name="btnChangeUserAltText">APPLY</string>
    <string name="albumCoverDesc">One Republic Waking Up album cover</string>
    <string name="songTitle">All The Right Moves</string>
    <string name="artistName">One Republic</string>
    <string name="ibPrevDesc">Previous track button</string>
    <string name="ibPlayDesc">Play track button</string>
    <string name="ibNextDesc">Next track button</string>
    <string name="etUsernameHint">enter username here</string>
    <string name="btnShuffleText">SHUFFLE</string>
    <string name="miniPlayerTitle">%s - %s</string>
    <string name="numPlaysText">%s plays</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
