<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/containerPadding"
    tools:context=".MainActivity"
    android:background="@color/mainBackground">

    <ImageView
        android:id="@+id/ivAlbumCover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/albumCoverHeight"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/onerepublic_waking_up_cover"
        android:contentDescription="@string/albumCoverDesc"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songTitle"
        style="@style/Title"
        app:layout_constraintTop_toBottomOf="@+id/ivAlbumCover"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/listItemTopBottomMargin"/>

    <TextView
        android:id="@+id/tvArtistName"
        tools:text="ajsdhfiauwhfliaweuhfawuhfuiaehrgfoaiuhrgergiuherigueaoirgheairgieagioeahrg"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artistName"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSongTitle"/>

    <TextView
        android:id="@+id/tvPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/numPlayTopMargin"
        tools:text="999999 plays"
        style="@style/BodyText"
        app:layout_constraintTop_toBottomOf="@+id/tvArtistName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/ibPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_previous"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/ibPlay"
        app:layout_constraintRight_toLeftOf="@+id/ibPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/ibPlay"
        android:contentDescription="@string/ibPrevDesc"/>

    <ImageButton
        android:id="@+id/ibPlay"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_play"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/tvPlays"
        app:layout_constraintRight_toLeftOf="@+id/ibNext"
        app:layout_constraintLeft_toRightOf="@+id/ibPrev"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/ibPlayDesc"/>

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_next"
        android:background="@android:color/transparent"
        android:foreground="?selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/ibPlay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ibPlay"
        app:layout_constraintBottom_toBottomOf="@+id/ibPlay"
        android:contentDescription="@string/ibNextDesc"/>

</androidx.constraintlayout.widget.ConstraintLayout>